i tried to fix the shifting, i give up

--- a/.config/matugen/templates/discord.css
+++ b/.config/matugen/templates/discord.css
@@ -3190,7 +3190,7 @@ div[data-list-id="profile-288633425303437312"]
 ._972a0d22c8afa7f0-username,
 ._972a0d22c8afa7f0-overflowTooltip
 {
-    font-family: var(--font-title)!important;
+    font-family: var(--font-title);
     color: var(--title-color)!important;
 }
 
